# AB-testing-marketing-campaign

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
src/ab_testing_marketing_campaign/: ab_test.py
